AI Fix: AI fix: Uses Runtime.getRuntime().exec() on a caller-supplied path without validation or argument escaping. This can lead to command injection or execution of unintended binaries/scripts, especially if the path is influenced by test data or environment variables.